kubernetes/apps/flux-system/weave-gitops/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitops
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitops.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: gitops
          port: 8080
      middlewares:
        - name: traefik-middleware-chains-default
          namespace: networking
  tls:
    secretName: "gitops-${SECRET_DOMAIN/./-}-tls"
